--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -129,6 +129,13 @@
   }
 }
 
+@layer base{
+    button:not(:disabled),
+    [role="button"]:not(:disabled){
+        cursor: pointer;
+    }
+}
+
 
 /* My added CSS */
 
